# Vector-Tracer-Pro

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  vector_tracer_pro.spec
.github/workflows/: ci.yml  release.yml
installer/: setup.iss
scripts/: build.ps1  build.py  check_deps.ps1  release.ps1
src/vector_tracer_pro/: __init__.py  app.py
src/vector_tracer_pro/config/: __init__.py  defaults.py  schema.py
src/vector_tracer_pro/controllers/: __init__.py
src/vector_tracer_pro/core/: __init__.py  classifier.py  dependency_checker.py  exceptions.py  image_loader.py  marketplace_validator.py  path_manager.py  pipeline.py  preprocessor.py  trace_strategy.py
src/vector_tracer_pro/core/image/: __init__.py  bitmapper.py  classifier.py  loader.py  preprocessor.py
src/vector_tracer_pro/services/: __init__.py  batch_runner.py  preset_manager.py  updater.py
src/vector_tracer_pro/trace/: __init__.py
src/vector_tracer_pro/ui/: __init__.py  main_window.py
src/vector_tracer_pro/ui/controllers/: __init__.py  main_controller.py
src/vector_tracer_pro/ui/dialogs/: __init__.py
src/vector_tracer_pro/ui/panels/: __init__.py
src/vector_tracer_pro/ui/styles/: dark_theme.py
src/vector_tracer_pro/ui/widgets/: __init__.py  batch_queue_table.py  control_panel.py  drop_zone.py  preview_panel.py
src/vector_tracer_pro/workers/: __init__.py  trace_worker.py
tests/: conftest.py
tests/integration/: test_dependency_checker.py  test_pipeline.py
tests/unit/core/: test_classifier.py  test_dependency_checker.py  test_image_loader.py  test_marketplace_validator.py  test_path_manager.py  test_pipeline.py  test_preprocessor.py  test_stress.py  test_trace_strategy.py
tests/unit/core/image/: test_bitmapper.py  test_classifier.py  test_loader.py  test_preprocessor.py
tests/unit/services/: test_batch_runner.py  test_preset_manager.py  test_updater.py
tests/unit/ui/: test_batch_queue_table.py  test_control_panel.py  test_drop_zone.py  test_main_controller.py  test_main_window.py  test_preview_panel.py
